--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Shopping list app to demo 'the modern classic'",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha -w"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -18,5 +19,12 @@
     "hyperdev",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "dotenv": "^4.0.0",
+    "faker": "^4.1.0",
+    "mocha": "^3.3.0"
+  }
 }
