--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,9 @@ language: node_js
 node_js:
 - '0.11'
 - '0.10'
+deploy: 
+  provider: heroku
+  api_key: b35bc62d-9547-4798-bf36-afdf237a0bd9
+  app: evening-river-33566
+  on:
+    repo: thien-pham/blog-app-mongoose-challenge-solution 
