adding to travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ langauge: node_js
 node_js: node
 services: 
 - mongodb
+addons:
+ apt:
+  sources:
+   - mongodb-3.2-precise
+  packages:
+   - mongodb-org-server
 deploy: 
   provider: heroku
   api_key: b35bc62d-9547-4798-bf36-afdf237a0bd9
